[project]
name = "python-guide-notebooks"
version = "0.1.0"
description = "A project to run the Python guide notebooks using uv."
requires-python = ">=3.8"

# 노트북 실행에 필요한 의존성을 여기에 추가할 수 있습니다.
# ch03_ex05.ipynb는 외부 라이브러리 의존성이 없습니다.
dependencies = [
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
# Jupyter 등 개발 환경 실행을 위한 의존성입니다.
dev = [
    "jupyterlab>=4.0.0",
]
